--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,10 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -35,22 +35,15 @@ jobs:
 
       - name: Build
         run: pnpm build
-      - name: Check build output
-        run: ls -R dist/public
 
-      - name: Upload artifact
+      - name: Create 404.html
+        run: cp dist/public/index.html dist/public/404.html
+
+      - name: Upload and Deploy
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist/public
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        
